[package]
name = "libredefender"
version = "0.7.0"
description = "Light-weight antivirus scanner for Linux"
authors = ["kpcyrd <git@rxv.cc>"]
license = "GPL-2.0 OR GPL-3.0"
repository = "https://github.com/kpcyrd/libredefender"
categories = ["command-line-utilities"]
readme = "README.md"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.40"
atoi = "2"
chrono = { version = "0.4.35", features = ["serde"] }
chrono-humanize = "0.2.1"
clamav-rs = { git = "https://github.com/kpcyrd/clamav-rs", branch = "clamav-1.2" }
clap = { version = "4.0.32", features = ["derive"] }
clap_complete = "4.0.7"
colored = "2.0.0"
config = { version = "0.13", default-features = false, features = ["toml"] }
crossbeam-channel = "0.5.1"
dirs = "5"
env_logger = "0.10"
glob = "0.3.0"
human-size = "0.4.1"
ioprio = "0.2"
libc = "0.2.94"
log = "0.4.14"
memchr = "2.4.0"
notify-rust = "4.5.2"
num-format = "0.4.0"
num_cpus = "1.13.0"
rand = "0.8.3"
serde = { version = "1.0.125", features = ["derive"] }
serde_json = "1.0.64"
starship-battery = "0.7.9"
v_htmlescape = "0.15"
walkdir = "2.3.2"

[dev-dependencies]
tempfile = "3"
